ops/k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server
spec:
  rules:
    - host: api-server.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 3000
